# fractal-task-interoperability

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.pixi  README.md  args.json  descriptor.json  docker-compose.pixi.yml  pyproject.toml  wrapper.py
.github/workflows/: docker-image.yml
examples/cli/: args_channel3.json  args_template.json  run_cellpose_sam_cli.sh
examples/nextflow/: main.nf  nextflow.config  nextflow_schema.json  params.yml  params_example.yml
examples/python/: run_cellpose_sam_python_script.py  run_channel3_nuclei.py  run_fractal_cellpose.py
examples/snakemake/: Snakefile  config_example.yaml
scripts/: download_zenodo_dataset.py  generate_nextflow_params.py  run_cellpose_sam_python_script.py
