# https://peps.python.org/pep-0517/
[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

# Project metadata (see https://peps.python.org/pep-0621)
[project]
name = "fractal-task-interoperability"
dynamic = ["version"]
description = "Proof-of-concept: run the Fractal Cellpose-SAM task in workflow orchestrators"
readme = "README.md"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Joel Lüthi" }]
requires-python = ">=3.11,<3.15"

dependencies = [
    "pooch",
    "requests",
]

[tool.setuptools_scm]

# ----------------
# Pixi - Minimal wrapper setup (CPU-only)
# ----------------
[tool.pixi.workspace]
channels = ["conda-forge", "pytorch"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
python = ">=3.11,<3.15"
# Force CPU-only PyTorch from conda before any PyPI installs
pytorch = "*"
torchvision = "*"  
torchaudio = "*"
cpuonly = "*"  # This package forces CPU-only versions of pytorch

# PyPI packages - fractal task will reuse the CPU-only PyTorch already installed above
[tool.pixi.pypi-dependencies]
fractal-task-interoperability = { path = ".", editable = true }
fractal-cellpose-sam-task = { git = "https://github.com/fractal-analytics-platform/fractal-cellpose-sam-task", tag = "v0.1.9" }

[tool.pixi.environments] 
default = { solve-group = "default" }

[tool.pixi.tasks]
# Test the wrapper with test data
test-wrapper = { cmd = ["python", "wrapper.py", "--infolder", "test_data/in", "--outfolder", "test_data/out", "--diameter", "30", "--nuc_channel", "0"] }
